# WowPixelDumper

./: .gitignore  AGENTS.md  CHANGELOG.md  COLOR.md  DotNet.md  Dumper.md  Dumper.py  EZPixelAddonX2Wiki.md  EZPixelDumperX2Wiki.md  HashMap.json  Keyboard.py  MidnightAddon.lua  MidnightAddon.toc  PriestDiscipline.py  Python.md  README.md  RotateEngine.py  WowPixelDumper.lua  WowPixelDumper.py  pyproject.toml
.clinerules/: file_purpost_define.md
Dumper/: ColorMap.json  Database.py  DumperGUI.py  IconLibraryDialog.py  MainWindow.py  Node.py  NodeExtractorData.py  Utils.py  Worker.py  node_titles.db
Dumper.NET/: Dumper.NET.csproj  Form1.cs  Program.cs  README.NET.md
EZAssistedX2/: EZAssistedX2.lua  EZAssistedX2.toc
EZAssistedX2.NET/: EZAssistedX2.NET.csproj  EZAssistedX2.NET.slnx  KeyMapping.cs  MainForm.Designer.cs  MainForm.cs  NativeMethods.cs  Program.cs  ScreenCapture.cs  WorkerService.cs
EZPixelAddonX2/: EZPixelAddonX2.lua  EZPixelAddonX2.toc  Setting.lua
EZPixelDumperX2/: COLOR.md  README.md  REBUILD.md  pyproject.toml
EZPixelDumperX2/src/: MainWindow.py  Node.py  Utils.py  Worker.py  comment_deleter.py  deploy.py
EZPixelRotationX2/: EZPixelRotationX2.cp312-win_amd64.pyd  EZPixelRotationX2.pyi  ReleasNote.md  pyproject.toml
PixelAddonX2/: PixelAddonX2.lua  PixelAddonX2.toc  Setting.lua
PixelDumperX2.NET/: ColorMap.json  Dumper.NET.csproj  Dumper.NET.slnx  Form1.Designer.cs
PixelDumperX2.PY/: Database.py  DumperGUI.cmd  DumperGUI.py  IconLibraryDialog.py  MainWindow.py  NodeExtractorData.py  node_titles.db  test_script.py
Rotation/: Druid.md  (+1 more)
(+17 files in other folders)
